# watergun

./: README.md  pyproject.toml
src/watergun/api/: brave_web_search_api.py  fetch_api.py  obsidian_api.py  watergun_server_api.py
src/watergun/server/: error_handlers.py  logging_config.py  logo.py  main.py  watergun.py
src/watergun/services/brave_web_search_service/: brave_web_search_service.py
src/watergun/services/fetch_service/: fetch_url_service.py
src/watergun/services/obsidian_service/: get_obsidian_doc_service.py
