[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watergun"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "conduit",
    "fastapi>=0.135.1",
    "rich>=14.3.3",
    "uvicorn>=0.41.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/watergun"]
sources = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/watergun/py.typed"]

# ── uv sources (local/editable deps) ───────────────────────────────────────────
[tool.uv.sources]
conduit = { path = "../conduit-project", editable = true }


[project.scripts]
watergun = "watergun.server.main:main"
